[package]
name = "syscontrol"
version = "0.1.0"
authors = ["teln0 <telnobynoyator@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
bitflags = "1.2.1"
stivale = { path = "/home/telno/Documents/git/rust-stivale/stivale-rs", default-features = false }